Consultar y listar películas desde la api.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
-<div class="alert alert-primary" role="alert">
-  Instalar y configurar bootstrap - modo oscuro.
-</div>
+<header>
+
+</header>
+<main>
+    <app-movie></app-movie>
+</main>
