--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <header>
-
+    <app-nav></app-nav>
 </header>
 <main>
-    <app-movie></app-movie>
+    <router-outlet></router-outlet>
+    <!-- <app-movie></app-movie> -->
 </main>
