--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="row">
         @for (movie of movies; track movie.id) {
-        <app-movie-card [movieInfo]="movie" class="col-sm-12 col-md-6 col-lg-4 mb-4">
+        <app-movie-card [movieInfo]="movie" class="col-sm-12 col-md-6 col-lg-4 mb-4 d-flex justify-content-center">
         </app-movie-card>
         }
     </div>
