--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
         <a class="navbar-brand" routerLink="">YeiiMaccDev_Movies</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -11,10 +11,10 @@
                     <a class="nav-link" routerLinkActive="active" routerLink="movies/popular">Populares</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" routerLink="movies/now_playing">Cartelera</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="movies/top_rated">Mejor valoradas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLinkActive="active" routerLink="movies/top_rated">Mejor valoradas</a>
+                    <a class="nav-link" routerLinkActive="active" routerLink="movies/now_playing">Cartelera</a>
                 </li>
             </ul>
             <form class="d-flex" role="search">
