--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -18,8 +18,9 @@
                 </li>
             </ul>
             <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Buscar</button>
+                <input class="form-control me-2" [(ngModel)]="query" [ngModelOptions]="{standalone: true}" type="search"
+                    placeholder="-" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit" (click)="Onsearch()">Buscar</button>
             </form>
         </div>
     </div>
